@@ -59,7 +59,7 @@ localtime = "%H:%M"
 localdate = "%d.%m.%Y"
 dayshown = datetime.combine(date.today(), time.min)
 shutdown = False 
-version = '1.2.7b'
+version = '1.2.7c'
 
 @route('/live/<filename>')
 def server_static9(filename):
