@@ -1,4 +1,5 @@
-2016-xx-xx 1.2.8 Password-free IP mask added into advanced configuration
+2016-xx-xx 1.2.8 GZip packed local XMLTV files can be read
+                 Password-free IP mask added into advanced configuration
                  Fix for login on iOS devices
                  Logout link added
 
